--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,13 @@
 <resources>
     <string name="app_name">Test task questions</string>
+    <string name="harry_potter">Мистер и миссис Дурсль проживали в доме номер четыре по Тисовой улице и всегда с гордостью заявляли, что они, слава богу, абсолютно нормальные люди.</string>
+    <string name="alice_adventure">Алиса начала очень скучать: она сидела рядом с сестрой на берегу и ничего не делала.</string>
+    <string name="gulliver_travels"> Мой отец имел небольшое поместье в Ноттингемшире; я был третий из его пяти сыновей.</string>
+    <string name="king_arthur_sword">«Темными веками» период с пятого по девятое столетие христианской эры назвали историки, раздосадованные малым числом и противоречивостью относящихся к нему фактов.</string>
+    <string name="witcher">Потом говорили, что человек этот пришел с севера, со стороны Канатчиковых ворот.</string>
+    <string name="game_of_thrones">Утро выдалось чистым и ясным, свежесть напоминала о близящемся конце лета. </string>
+    <string name="twilight">В аэропорт мы с мамой приехали на машине с открытыми окнами.</string>
+    <string name="dark_tower">Преподобный Дон Каллагэн когда-то был католическим священником в городке Салемс-Лот, более не отмеченном ни на одной карте. </string>
+    <string name="walking_castle">В стране Ингарии, где взаправду существуют диковины вроде семимильных сапог и шапок-невидимок, родиться старшим из троих детей – изрядное невезение. </string>
+    <string name="the_chronicles_of_narnia">Повесть эта о том, что случилось, когда твой дедушка был еще маленьким. </string>
 </resources>
